# ScanTailor

./: .clang-tidy  CMakeLists.txt
cmake/: googletest.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  FixDpiDialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectCreationContext.cpp  ProjectCreationContext.h  ProjectFilesDialog.cpp  ProjectOpeningContext.h  RelinkablePathVisualization.cpp  RelinkingDialog.cpp  RelinkingModel.cpp  RelinkingModel.h  ThumbnailSequence.cpp  ThumbnailSequence.h
src/core/: AbstractFilter.h  ApplicationSettings.h  AtomicFileOverwriter.h  BackgroundExecutor.h  BlackOnWhiteEstimator.cpp  BlackOnWhiteEstimator.h  CMakeLists.txt  ColorSchemeFactory.h  ColorSchemeManager.h  ContentMask.cpp  ContentMask.h  ContentSpanFinder.h  DebugImageView.cpp  DebugImageView.h  DebugImagesImpl.cpp  DebugImagesImpl.h  DefaultParamsProfileManager.h  DefaultParamsProvider.h  Despeckle.cpp  DeviationProvider.h  ErrorWidget.h  EstimateBackground.cpp  EstimateBackground.h  FileNameDisambiguator.cpp  FileNameDisambiguator.h  FilterData.cpp  IconProvider.h  ImageFileInfo.cpp  ImageSettings.cpp  ImageSettings.h  ImageViewBase.cpp  ImageViewBase.h  ImageViewInfoProvider.h  IncompleteThumbnail.cpp  JpegMetadataLoader.cpp  LoadFileTask.h  OutOfMemoryHandler.cpp  OutOfMemoryHandler.h  PngMetadataLoader.cpp  PngMetadataLoader.h  (+24 more)
src/core/filters/deskew/: CMakeLists.txt  CacheDrivenTask.h  DeskewUtils.cpp  Filter.cpp  Filter.h  ImageView.cpp  Params.cpp  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp
src/core/filters/fix_orientation/: CMakeLists.txt  CacheDrivenTask.h  Filter.cpp  Filter.h  FixOrientationUtils.cpp  Settings.cpp  Settings.h  Task.cpp  Task.h
src/core/filters/output/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  ChangeDewarpingDialog.cpp  ColorParams.cpp  ColorPickupInteraction.cpp  DespeckleState.cpp  DespeckleView.cpp  DespeckleView.h  DespeckleVisualization.cpp  DewarpingView.cpp  FillZoneEditor.cpp  FillZoneEditor.h  Filter.cpp  Filter.h  OutputFileParams.h  OutputGenerator.cpp  OutputGenerator.h  OutputImageWithOriginalBackgroundMask.cpp  OutputUtils.cpp  OutputUtils.h  PictureZoneEditor.cpp  Task.cpp  (+4 more)
src/core/interaction/: DragHandler.cpp  DragHandler.h  DraggableLineSegment.h  DraggableObject.h  DraggablePoint.h  DraggablePolygon.cpp  DraggablePolygon.h  InteractionHandler.cpp  InteractionHandler.h  InteractionState.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.cpp  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h
src/core/zones/: EditableSpline.h  EditableZoneSet.h  SerializableSpline.cpp  SerializableSpline.h  SplineVertex.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneDefaultInteraction.cpp  ZoneDragInteraction.cpp  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.h  ZoneVertexDragInteraction.cpp
src/dewarping/: Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DetectVertContentBounds.cpp  DetectVertContentBounds.h  DewarpingPointMapper.cpp  DewarpingPointMapper.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  RasterDewarper.cpp  RasterDewarper.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp  TowardsLineTracer.h
src/foundation/: AlignedArray.h  AutoRemovingFile.cpp  AutoRemovingFile.h  CMakeLists.txt  DynamicPool.h  FastQueue.h  FlagOps.h  Grid.h  GridLineTraverser.h  Hashes.h  MatMNT.h  MatT.h  NonCopyable.h  PriorityQueue.h  Proximity.cpp  SafeDeletingQObjectPtr.h  Span.h  StaticPool.h  TaskStatus.h  VecNT.h  VecT.h  VirtualFunction.h
src/imageproc/: BWColor.h  BackgroundColorCalculator.cpp  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.h  CMakeLists.txt  ColorMixer.h  ColorSegmenter.cpp  ConnComp.h  ConnCompEraser.cpp  ConnCompEraser.h  ConnCompEraserExt.h  Connectivity.h  ConnectivityMap.cpp  DebugImages.h  Dpi.h  FindPeaksGeneric.h  GaussBlur.cpp  GaussBlur.h  GrayImage.h  Grayscale.cpp  Grayscale.h  HoughLineDetector.cpp  HoughLineDetector.h  ImageCombination.cpp  ImageCombination.h  InfluenceMap.cpp  IntegralImage.h  MaxWhitespaceFinder.h  MorphGradientDetect.cpp  MorphGradientDetect.h  Morphology.cpp  Morphology.h  OrthogonalRotation.cpp  PolygonRasterizer.cpp  PolynomialSurface.cpp  (+19 more)
src/imageproc/tests/: TestRastLineFinder.cpp
src/math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeLists.txt  HomographicTransform.h  LineBoundedByRect.cpp  LineBoundedByRect.h  LinearFunction.cpp  LinearFunction.h  LinearSolver.cpp  LinearSolver.h  MatrixCalc.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.cpp  QuadraticFunction.h  SidesOfLine.cpp  SidesOfLine.h  ToLineProjector.cpp  ToLineProjector.h  XSpline.cpp  XSpline.h
src/math/adiff/: Function.cpp  Function.h  SparseMap.cpp  SparseMap.h
src/math/spfit/: ConstraintSet.cpp  ConstraintSet.h  FittableSpline.h  FrenetFrame.cpp  FrenetFrame.h  LinearForceBalancer.cpp  LinearForceBalancer.h  ModelShape.h  OptimizationResult.cpp  OptimizationResult.h  Optimizer.cpp  Optimizer.h  PolylineModelShape.cpp  PolylineModelShape.h  SplineFitter.cpp  SplineFitter.h  SqDistApproximant.cpp  SqDistApproximant.h
src/tests/: .clang-tidy  CMakeLists.txt
src/tests/core/: CMakeLists.txt  TestContentSpanFinder.cpp  TestSmartFilenameOrdering.cpp
src/tests/imageproc/: CMakeLists.txt  TestBinaryImage.cpp  TestConnCompEraser.cpp  TestConnCompEraserExt.cpp  TestGrayscale.cpp  TestMorphology.cpp  TestOrthogonalRotation.cpp  TestPolygonRasterizer.cpp  TestRastLineFinder.cpp  TestRasterOp.cpp  TestReduceThreshold.cpp  TestSEDM.cpp  TestScale.cpp  TestSeedFill.cpp  TestShear.cpp  TestSkewFinder.cpp  TestSlicedHistogram.cpp  TestTransform.cpp  Utils.h
src/tests/math/: CMakeLists.txt  TestHessians.cpp  TestMatrixCalc.cpp  TestSqDistApproximant.cpp  TestUtils.h
src/translations/: scantailor_hu.ts
tools/: clang-tidy.sh
(+32 files in other folders)
